@@ -31,11 +31,9 @@ import androidx.fragment.app.FragmentActivity;
 import com.android.launcher3.R;
 import com.android.launcher3.Utilities;
 import com.android.launcher3.logging.StatsLogManager;
-import com.android.quickstep.TouchInteractionService.TISBinder;
 import com.android.quickstep.interaction.TutorialController.TutorialType;
-import com.android.quickstep.util.TISBindHelper;
 
-import java.util.Arrays;
+import java.util.List;
 
 /** Shows the gesture interactive sandbox in full screen mode. */
 public class GestureSandboxActivity extends FragmentActivity {
@@ -54,9 +52,6 @@ public class GestureSandboxActivity extends FragmentActivity {
     private SharedPreferences mSharedPrefs;
     private StatsLogManager mStatsLogManager;
 
-    private TISBindHelper mTISBindHelper;
-    private TISBinder mBinder;
-
     @Override
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
@@ -74,8 +69,6 @@ public class GestureSandboxActivity extends FragmentActivity {
         getSupportFragmentManager().beginTransaction()
                 .add(R.id.gesture_tutorial_fragment_container, mFragment)
                 .commit();
-
-        mTISBindHelper = new TISBindHelper(this, this::onTISConnected);
     }
 
     @Override
@@ -213,37 +206,7 @@ public class GestureSandboxActivity extends FragmentActivity {
             DisplayMetrics metrics = new DisplayMetrics();
             display.getMetrics(metrics);
             getWindow().setSystemGestureExclusionRects(
-                    Arrays.asList(new Rect(0, 0, metrics.widthPixels, metrics.heightPixels)));
+                    List.of(new Rect(0, 0, metrics.widthPixels, metrics.heightPixels)));
         }
-    }
-
-    @Override
-    protected void onResume() {
-        super.onResume();
-        updateServiceState(true);
-    }
-
-    private void onTISConnected(TISBinder binder) {
-        mBinder = binder;
-        updateServiceState(isResumed());
-    }
-
-    @Override
-    protected void onPause() {
-        super.onPause();
-        updateServiceState(false);
-    }
-
-    private void updateServiceState(boolean isEnabled) {
-        if (mBinder != null) {
-            mBinder.setGestureBlockedTaskId(isEnabled ? getTaskId() : -1);
-        }
-    }
-
-    @Override
-    protected void onDestroy() {
-        super.onDestroy();
-        mTISBindHelper.onDestroy();
-        updateServiceState(false);
     }
 }
